HTML layout complete

--- a/index.html
+++ b/index.html
@@ -45,14 +45,22 @@
             <input type="text" id="highetsScoreName">
             <button class="submitYourscorebutton" id="submitYourscorebutton"> Submit Your Score</button>
         </form>
-
+        <ol class="thehighestScorelist" id= thehighestScorelist>
+            <li class="highestscore1" id="highestscore1">Name: = Score</li>
+            <li class="highestscore2" id="highestscore2">Name: = Score</li>
+            <li class="highestscore3" id="highestscore3">Name: = Score</li>
+            <li class="highestscore4" id="highestscore4">Name: = Score</li>
+            <li class="highestscore5" id="highestscore5">Name: = Score</li>
+            <li class="highestscore6" id="highestscore6">Name: = Score</li>
+            <li class="highestscore7" id="highestscore7">Name: = Score</li>
+            <li class="highestscore8" id="highestscore8">Name: = Score</li>
+            <li class="highestscore9" id="highestscore9">Name: = Score</li>
+            <li class="highestscore10" id="highestscore10">Name: = Score</li>
+        </ol>
+        <button class="restartThequizbutton" id="restartThequizbutton">Restart The Quiz</button> 
     </div>
 
-
-
-
-
-
-
+<script src=".assets/js/questions.js"></script>
+<script src=".assets/js/script.js"></script>
 </body>
 </html>
